Added validations message in form and fields in users

--- a/src/Views/Login/Login.css
+++ b/src/Views/Login/Login.css
@@ -34,7 +34,7 @@
 }
 
 .login-form-control {
-    margin: 5px;
+    margin: 5px 0px;
     width: 400px;
     padding: 10px;
     border: 1px solid #ccc;
