--- a/src/Components/UserRegister/UserRegister.css
+++ b/src/Components/UserRegister/UserRegister.css
@@ -38,7 +38,7 @@
   .text-invalid {
     margin-top: 5px;
     color: red;
-    text-align: initial;
+    text-align: center;
     font-weight: 300;
     font-size: 12px;
   }
