--- a/src/Views/Register/Register.css
+++ b/src/Views/Register/Register.css
@@ -3,17 +3,14 @@
 /* Estilos para el contenedor principal */
 .register-container {
   display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-image: url('/src/Assets/Images/background.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-image: url('/src/Assets/Images/background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-
-
-
 
 /* Estilos para el "box" que contiene la imagen y el formulario */
 .box {
@@ -23,7 +20,6 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
   max-width: 500px; /* Aumenta el ancho máximo del "box" */
-  margin: 20px 0px;
 }
 
 /* Estilos para la imagen del logo */
@@ -35,7 +31,6 @@
 /* Estilos para los elementos del formulario */
 .register-form-group {
   margin-bottom: 10px;
-  text-align: initial;
 }
 
 .register-form-control {
@@ -105,6 +100,7 @@
 
   /* Reducción del tamaño de los elementos de entrada (input) */
   .register-form-control {
+    width: 300%;
     padding: 8px; /* Ajusta el espaciado interno */
     font-size: 14px; /* Ajusta el tamaño de la fuente */
     max-width: 100%; /* Evita que los input se salgan del box */
