--- a/src/Components/Dropdown/dropdown.css
+++ b/src/Components/Dropdown/dropdown.css
@@ -1,18 +1,23 @@
 /* Dropdown.css */
-
 .dropdown-container {
-    position: relative;
-    display: inline-block;
-    margin-left: auto; /* Cambia margin-right a margin-left */
-  }
-  
-  .user-icon {
-    cursor: pointer;
-    color: var(--color-primary);
-    width: 35px;
-    height: 35px;
-  }
-  
+  position: relative;
+  display: flex;
+  margin-left: auto; /* Cambia margin-right a margin-left */
+  gap: 5px;
+  margin-right: 13px;
+  align-items: baseline;
+}
+
+.user-icon img {
+  cursor: pointer;
+  color: var(--color-primary);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  gap: 10px;
+
+}
+
   .menu {
     display: block;
     position: absolute;
@@ -48,6 +53,9 @@
     border-bottom: 1px solid;
     transform: scale(1.03);
   }
+
+
+
   
   :root {
     --color-primary: #008DD8;
