--- a/src/Components/Alerts/alerts.css
+++ b/src/Components/Alerts/alerts.css
@@ -1,6 +1,6 @@
-.swal-icon--success__line .swal-icon--success__line--long {
+.swal-icon--success__line, .swal-icon--success__line--long {
     right: 2px !important;
 }
-.swal-icon--success__line .swal-icon--success__line--tip {
+.swal-icon--success__line, .swal-icon--success__line--tip {
     left: 2px !important;
 }
