--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -22,6 +22,8 @@
   flex: 1;
   justify-content: center;
   align-items: center;
+  margin-left: 15px;
+  text-align: justify;
 }
 .fomquotes-card-body{
   width: 400px; /* Ancho deseado de las tarjetas */
@@ -95,6 +97,7 @@
 .formquotes-icon-add {
   font-size: 40px;
   margin-left: 300px;
+  color: var(--color-primary)
 }
 
 .formquotes-icon-pill {
