--- a/src/Components/Quotes/Quote.css
+++ b/src/Components/Quotes/Quote.css
@@ -9,9 +9,9 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 10px;
-    margin: 10px;
+    margin: 10px 30px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-
+    gap: 5px
   }
   
   .quote-card h1 {
@@ -23,4 +23,36 @@
   .quote-card span {
     font-size: 14px;
     color: #555;
+  }
+
+  .img-doctor-quote {
+    width: 15%;
+  }
+
+  .col-quote {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .title-quote {
+    font-weight: bold;
+  }
+
+  .status-color {
+    border-radius: 5px;
+    padding: 3px;
+  }
+
+.warning {
+    background-color: yellow;
+    color: #000000;
+  }
+.error {
+    background-color: red;
+    color: #fff;
+  }
+.success {
+  color: #fff;
+    background-color: green;
   }
