--- a/src/Components/Quotes/Quote.css
+++ b/src/Components/Quotes/Quote.css
@@ -1,58 +1,90 @@
+/* Estilos originales para dispositivos grandes */
 .sidebar {
-    flex: 1;
-    overflow: scroll;
-    overflow: auto;
-  }
-  
+  padding: 20px;
+}
+
+.quote-card {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+}
+
+.img-doctor-quote {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+.col-quote {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.title-quote {
+  font-weight: bold;
+}
+
+.botones {
+  display: flex;
+  align-items: center;
+}
+
+.botones img {
+  width: 34px;
+  height: 34px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.status-color {
+  font-weight: bold;
+}
+
+.status-color.warning {
+  color: orange;
+}
+
+.status-color.success {
+  color: green;
+}
+
+.status-color.error {
+  color: red;
+}
+
+/* Estilos para dispositivos móviles (Media Query) */
+@media (max-width: 768px) {
   .quote-card {
-    background-color: var( --color-secundary);
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px 30px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-    gap: 5px
-  }
-  
-  .quote-card h1 {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .quote-card span {
-    font-size: 14px;
-    color: #555;
+    display: flex;
+    flex-wrap: wrap; /* Cambiar a disposición de fila en dispositivos móviles */
+    align-items: flex-start; /* Alinear los elementos en la parte superior */
   }
 
   .img-doctor-quote {
-    width: 15%;
+    width: 70px; /* Ajusta el ancho de la imagen como desees */
+    height: 70px; /* Ajusta la altura de la imagen como desees */
+    margin-right: 10px; /* Reduce el margen derecho de la imagen */
   }
 
   .col-quote {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex: 1;
   }
 
   .title-quote {
+    display: block; /* Mostrar el título en dispositivos móviles */
     font-weight: bold;
   }
 
-  .status-color {
-    border-radius: 5px;
-    padding: 3px;
+  .botones {
+    display: flex;
+    align-items: center;
+    flex-direction: row; /* Mantener la disposición de fila en dispositivos móviles */
+    margin-top: 10px;
   }
-
-.warning {
-    background-color: yellow;
-    color: #000000;
-  }
-.error {
-    background-color: red;
-    color: #fff;
-  }
-.success {
-  color: #fff;
-    background-color: green;
-  }
+}
