--- a/src/Views/Home/Home.css
+++ b/src/Views/Home/Home.css
@@ -50,6 +50,9 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Agrega una sombra suave */
   }
 
-  
+  .home{
+    padding-right: 15px;
+    margin: 11px;
+  }
   /* ...otros estilos... */
   
