--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -1,5 +1,5 @@
 
-.modal {
+.modal-component {
     position: fixed;
     top: 0;
     left: 0;
@@ -12,7 +12,7 @@
     z-index: 1000;
   }
   
-  .modal-content {
+  .modal-content-component {
     background: #fff;
     border-radius: 5px;
     padding: 20px;
@@ -22,16 +22,16 @@
     text-align: left;
   }
   
-  .modal h2 {
+  .modal-component h2 {
     font-size: 24px;
     margin: 0 0 20px;
   }
   
-  .modal p {
+  .modal-component p {
     margin: 0 0 10px;
   }
   
-  .modal button {
+  .modal-component button {
     background: #007BFF;
     color: #fff;
     border: none;
@@ -41,6 +41,6 @@
     font-size: 16px;
   }
   
-  .modal button:hover {
+  .modal-component button:hover {
     background: #0056b3;
   }
