--- a/src/Views/Admin_doctors/Admindoctors.css
+++ b/src/Views/Admin_doctors/Admindoctors.css
@@ -46,3 +46,45 @@
 .busqueda {
     margin-top: 10px;
 }
+
+.custom-select {
+    padding: 5px; /* Añade relleno alrededor del select */
+    border: 1px solid #ccc; /* Agrega un borde alrededor del select */
+    border-radius: 5px; /* Agrega bordes redondeados al select */
+    background-color: #fff; /* Color de fondo blanco */
+    color: #333; /* Color de texto */
+    width: 100%; /* Opcional: Ajusta el ancho según tus preferencias */
+  }
+  
+  /* Estilo para las opciones del select */
+  .custom-select option {
+    background-color: #fff; /* Color de fondo blanco para las opciones */
+    color: #333; /* Color de texto */
+  }
+
+  .custom-modal-admin {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--color-secundary);
+    border: 2px solid var(--color-primary);
+    padding: 20px;
+    text-align: center;
+    width: 90%;
+    border-radius: 8px;
+}
+
+.custom-close-icon {
+    background-color: blue; /* Fondo azul */
+    border-radius: 50%; /* Bordes redondeados para hacerlo circular */
+    color: white; /* Color del icono en blanco */
+    font-size: 20px; /* Tamaño de fuente personalizado */
+    padding: 8px; /* Espacio alrededor del icono */
+  }
+
+  .admin-close-icon {
+    color: var(--color-primary);
+    width: 50px;
+    height: auto;
+  }
