--- a/src/Views/Admin/Admin.css
+++ b/src/Views/Admin/Admin.css
@@ -26,13 +26,19 @@
     width: 100%;
 }
 .card-admin:first-child{
-    background-color: rgb(138, 123, 123);
+    background-color: var(--color-primary);
 }
 .card-admin:nth-child(2){
-    background-color: rgb(138, 123, 123);
+    background-color: var(--color-primary);
 }
 .card-admin:nth-child(3){
-    background-color: rgb(138, 123, 123);
+    background-color: var(--color-primary);
+}
+.card-admin:nth-child(4){
+    background-color: var(--color-primary);
+}
+.card-admin:nth-child(5){
+    background-color: var(--color-primary);
 }
 .card-admin-inner{
     display: flex;
